# Loc_EKF

./: .gitignore  CMakeLists.txt  README.md
src/: kf_gins.cpp  new_kf.cpp
src/common/: angle.h  earth.h  rotation.h
src/fileio/: imufileloader.h
src/kf-gins/: DataProcessing.cpp  DataProcessing.h  drawError.cpp  drawError.h  gi_engine.cpp  gi_engine.h  insmech.cpp  kf_gins_types.h  satellite.cpp  satellite.h
